[gd_scene load_steps=16 format=3 uid="uid://ces1qvtgewou1"]

[ext_resource type="Texture2D" uid="uid://dmvxuijvn5oga" path="res://Assets/Level Button Assets/Level Menu SCENE Chapter 1.png" id="1_fppjl"]
[ext_resource type="Script" uid="uid://da7noyqgu73pf" path="res://Scripts/Menu Scripts/Chapter1.gd" id="1_hubm1"]
[ext_resource type="Texture2D" uid="uid://cb8ouxc4qpypr" path="res://Assets/Level Button Assets/L1 Button (not hovered).png" id="2_7wapr"]
[ext_resource type="Texture2D" uid="uid://j4dcosq8qsey" path="res://Assets/Level Button Assets/Level LOCKED Button.png" id="2_r2i8p"]
[ext_resource type="Texture2D" uid="uid://cj7yn27t5i1ji" path="res://Assets/Level Button Assets/L2 Button (not hovered).png" id="4_hubm1"]
[ext_resource type="Texture2D" uid="uid://df5yucvby4l1o" path="res://Assets/Level Button Assets/L3 Button (not hovered).png" id="6_60qci"]
[ext_resource type="Texture2D" uid="uid://curgm6cgwjyrs" path="res://Assets/Level Button Assets/L4 Button (not hovered).png" id="8_u5nli"]
[ext_resource type="Texture2D" uid="uid://btks2kayytrap" path="res://Assets/Level Button Assets/L5 Button (not hovered).png" id="10_5vg4r"]
[ext_resource type="Texture2D" uid="uid://csm1xjflwfd8v" path="res://Assets/Level Button Assets/L6 Button (not hovered).png" id="12_nuxbn"]
[ext_resource type="Texture2D" uid="uid://dx0ue3sxnvp67" path="res://Assets/Level Button Assets/L7 Button (not hovered).png" id="14_weaga"]
[ext_resource type="Texture2D" uid="uid://xyojx842xacs" path="res://Assets/Level Button Assets/L8 Button (not hovered).png" id="16_tmlwy"]
[ext_resource type="Texture2D" uid="uid://bqfjh2bqlrhck" path="res://Assets/Level Button Assets/L9 Button (not hovered).png" id="18_tvv4i"]
[ext_resource type="Texture2D" uid="uid://b3j5efcdotmyb" path="res://Assets/Level Button Assets/Boss Level Button (not hovered).png" id="20_xhs1g"]
[ext_resource type="Texture2D" uid="uid://crlfeyg4504ld" path="res://Assets/Menu Buttons/Back BUTTON (not hovered).png" id="22_06xmo"]
[ext_resource type="Texture2D" uid="uid://dgaiakbbqn3w2" path="res://Assets/Level Button Assets/Chapters Locked Button (not hovered).png" id="24_ixp5n"]

[node name="Chapter1Menu" type="Node2D"]
script = ExtResource("1_hubm1")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelMenuSceneChapter1" type="Sprite2D" parent="Background"]
position = Vector2(270, 480)
texture = ExtResource("1_fppjl")

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Level1" type="TouchScreenButton" parent="Buttons"]
position = Vector2(111, 276)
texture_normal = ExtResource("2_7wapr")

[node name="Level2" type="TouchScreenButton" parent="Buttons"]
position = Vector2(221, 276)
texture_normal = ExtResource("4_hubm1")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Level2"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_r2i8p")

[node name="Level3" type="TouchScreenButton" parent="Buttons"]
position = Vector2(331, 276)
texture_normal = ExtResource("6_60qci")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Level3"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_r2i8p")

[node name="Level4" type="TouchScreenButton" parent="Buttons"]
position = Vector2(111, 375)
texture_normal = ExtResource("8_u5nli")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Level4"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_r2i8p")

[node name="Level5" type="TouchScreenButton" parent="Buttons"]
position = Vector2(221, 375)
texture_normal = ExtResource("10_5vg4r")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Level5"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_r2i8p")

[node name="Level6" type="TouchScreenButton" parent="Buttons"]
position = Vector2(331, 375)
texture_normal = ExtResource("12_nuxbn")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Level6"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_r2i8p")

[node name="Level7" type="TouchScreenButton" parent="Buttons"]
position = Vector2(111, 474)
texture_normal = ExtResource("14_weaga")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Level7"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_r2i8p")

[node name="Level8" type="TouchScreenButton" parent="Buttons"]
position = Vector2(221, 474)
texture_normal = ExtResource("16_tmlwy")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Level8"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_r2i8p")

[node name="Level9" type="TouchScreenButton" parent="Buttons"]
position = Vector2(331, 474)
texture_normal = ExtResource("18_tvv4i")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/Level9"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_r2i8p")

[node name="BossLevel" type="TouchScreenButton" parent="Buttons"]
position = Vector2(112, 586)
scale = Vector2(1.065, 0.997)
texture_normal = ExtResource("20_xhs1g")

[node name="LockedOverlay" type="TextureRect" parent="Buttons/BossLevel"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("24_ixp5n")

[node name="BackButton" type="TouchScreenButton" parent="Buttons"]
position = Vector2(119, 768)
texture_normal = ExtResource("22_06xmo")

[connection signal="pressed" from="Buttons/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Buttons/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Buttons/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Buttons/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Buttons/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="Buttons/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="Buttons/Level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="Buttons/Level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="Buttons/Level9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="Buttons/BossLevel" to="." method="_on_boss_level_pressed"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_back_button_pressed"]
